# akriti-core

./: .gitignore  Cargo.toml  README.md
android/: .gitignore  CMakeLists.txt  Cargo.toml  settings.gradle
android/akriti/: build.gradle
android/akriti/src/akriti-core-stamp/: akriti-core-build-Debug.cmake
android/akriti/src/androidTest/java/io/ganita/android/akriti/: ExampleInstrumentedTest.java
android/akriti/src/main/: AndroidManifest.xml
android/akriti/src/main/cpp/: akriti-helloworld.h  native-lib.cpp
android/akriti/src/main/java/io/ganita/android/akriti/: HelloWorld.java
android/akriti/src/main/res/values/: strings.xml
android/akriti/src/test/java/io/ganita/android/akriti/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
android/rust/: lib.rs
android/sample/: build.gradle
android/sample/src/androidTest/java/io/ganita/android/akriti/sample/: ExampleInstrumentedTest.java
android/sample/src/main/: AndroidManifest.xml
android/sample/src/main/java/io/ganita/android/akriti/sample/: MainActivity.java
android/sample/src/main/res/layout/: activity_main.xml
android/sample/src/test/java/io/ganita/android/akriti/sample/: ExampleUnitTest.java
android/src/akriti-core-build-stamp/: akriti-core-build-build-Debug.cmake
constants/: Cargo.toml  build.rs  lib.rs  mathml.rs  unicode.rs
constants/blobs/: math_variant_dictionary.json  operator_dictionary.json
constants/props/: Cargo.toml  lib.rs
core/: Cargo.toml
core/constants/: Cargo.toml  build.rs
core/constants/props/: Cargo.toml  lib.rs
core/examples/inspect/: canvas.rs  math_ruler.rs  platform.rs  text_ruler.rs
core/macros/: lib.rs
core/src/: lib.rs  main.rs
core/src/draw/: fixed.rs  space.rs  symbol.rs  text.rs  wrapper.rs
core/src/elements/: family.rs  presentation.rs
core/src/layout/: mempty.rs  mod.rs
core/src/paint/: typeface.rs
core/src/platform/: context.rs  mod.rs
core/src/props/: frame_spacing.rs  id_ref.rs  length.rs  mathvariant.rs  notation.rs  pseudo_length.rs  script_level.rs  table_side.rs
core/src/utils/: mod.rs
examples/inspect/: canvas.rs  inspect.rs  math_ruler.rs  platform.rs  text_ruler.rs
ios/: Cargo.toml
ios/Akriti.xcworkspace/: contents.xcworkspacedata
ios/AkritiKit/: build.sh
ios/AkritiKit/AkritiKit/: AkritiKit.h  HelloWorld.swift  akriti-helloworld.h
ios/AkritiKit/AkritiKit.xcodeproj/: project.pbxproj
ios/AkritiKit/AkritiKitTests/: AkritiKitTests.swift
ios/Sample/Sample/: AppDelegate.swift  ViewController.swift
ios/Sample/Sample.xcodeproj/: project.pbxproj
ios/Sample/SampleTests/: SampleTests.swift
ios/rust/: lib.rs
macros/: Cargo.toml  lib.rs
snapshot/: Cargo.toml
snapshot/src/: canvas.rs  lib.rs  platform.rs  ruler.rs
src/: lib.rs  main.rs
src/draw/: absolute_layout.rs  empty.rs  fixed.rs  glyph.rs  line.rs  linear_layout.rs  mod.rs  padding_box.rs  phantom.rs  space.rs  symbol.rs  text.rs  wrapper.rs
src/elements/: family.rs  inherited_props.rs  instance_id.rs  mempty.rs  mod.rs  presentation.rs  property.rs  style_props.rs
src/elements/general_layout/: mfenced.rs  mfrac.rs  mod.rs  mpadded.rs  mphantom.rs  mroot.rs  mrow.rs  msqrt.rs
src/elements/scripts_and_limits/: mmultiscripts.rs  mod.rs  mover.rs  msub.rs  msubsup.rs  msup.rs  munder.rs  munderover.rs
src/elements/tabular_math/: malignmark.rs  mlabeledtr.rs  mod.rs  mtable.rs  mtd.rs  mtr.rs
src/elements/token/: mi.rs  mn.rs  (+5 more)
src/layout/: mempty.rs  mod.rs  presentation.rs
src/paint/: canvas.rs  mod.rs  point.rs  rect.rs  ruler.rs  style.rs  typeface.rs
src/platform/: context.rs  display_metrics.rs  mod.rs  test.rs
src/props/: accent.rs  color.rs  column_width.rs  directionality.rs  frame_spacing.rs  group_align.rs  halign.rs  indent.rs  inherited.rs  length.rs  line_thickness.rs  line_type.rs  linebreak.rs  mathsize.rs  mathvariant.rs  mod.rs  notation.rs  operator_form.rs  property_modifier.rs  pseudo_length.rs  style.rs  table_side.rs  valign.rs
src/test/: mod.rs
src/utils/: mod.rs
tests/: common.rs  drawables.rs  elements.rs
(+47 files in other folders)
